Fix horizontal scroll bar in Safari. closes #389
Apply the `overflow-x: hidden` rule to `.site` instead of the body tag
itself.

--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -8,11 +8,10 @@
 
 body {
 	background-color: $body-background;
-	overflow-x: hidden;
 }
 
-.clearfix {
-	@include clearfix;
+.site {
+	overflow-x: hidden;
 }
 
 /**
